firs version new layout

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="icons/arrows.css">
   </head>
   <body>
     <header>
@@ -11,8 +12,9 @@
         <div class="nav_brand"><a href="index.html">Izeland</a></div>
         <div class="nav_options">
           <ul class="nav_options_list">
+            <li><a href="index.html">Inici</a></li>
             <li><a href="chapters.html">Capítols</a></li>
-            <li><a href="about.html">Sobre nosaltres</a></li>
+            <li><a href="about.html">Mat Maths</a></li>
             <li><a href="#">CAST</a></li>
           </ul>
         </div>
@@ -28,16 +30,34 @@
            Les aventures apareixen en fitxes descarregables i imprimibles en B/N a doble cara amb aspecte de llibre de lectura que, a banda de la història, contenen quadres de definició i exercicis per a treballar els continguts matemàtics.</p>
         <p>Mat Maths comprendrà els quatre cursos de secundària. Cada curs contindrà de nou a dotze unitats didàctiques i cada unitat, tres fitxes. Vist des del punt de vista de ficció, però, parlem de temporades en lloc de cursos, de capítols en lloc d'unitats didàctiques, i d'actes en lloc de fitxes.</p>
         <p>Mat Maths és motivador i rigorós. Motivador, ja que s'emmarca en la tradició de transmetre coneixement a partir d’històries, i rigorós, ja que els continguts són acurats i curriculars.</p>
-        <p>Mat Maths és útil en moltes situacions diverses:
-          <ul>
-            <li>Com a material de suport en una classe ordinària.</li>
-            <li>Com a material principal en grups difícils o en aules d’acollida.</li>
-            <li>Per a cobrir una lliçó amb un/a professor/a de guàrdia en absència del/a titular.</li>
-            <li>Per al treball autònom dels alumnes a casa.</li>
-            <li>En classes interdisciplinars de matemàtiques i llengua.</li>
-            <li>Com a material de treball d’estiu.</li>
-          </ul>
-        </p>
+        <p>Mat Maths és útil en moltes situacions diverses:</p>
+        <table class="table_list">
+          <tr>
+            <td><span class="icon-chevron-right"></span></td>
+            <td>
+               Com a material de suport en una classe ordinària.</td>
+          </tr>
+          <tr>
+            <td><span class="icon-chevron-right"></span></td>
+            <td>Com a material principal en grups difícils o en aules d’acollida.</td>
+          </tr>
+          <tr>
+            <td><span class="icon-chevron-right"></span></td>
+            <td>Per a cobrir una lliçó amb un/a professor/a de guàrdia en absència del/a titular.</td>
+          </tr>
+          <tr>
+            <td><span class="icon-chevron-right"></span></td>
+            <td>Per al treball autònom dels alumnes a casa.</td>
+          </tr>
+          <tr>
+            <td><span class="icon-chevron-right"></span></td>
+            <td>En classes interdisciplinars de matemàtiques i llengua.</td>
+          </tr>
+          <tr>
+            <td><span class="icon-chevron-right"></span></td>
+            <td>Com a material de treball d’estiu.</td>
+          </tr>
+        </table>
         <p>
            Mat Maths ha estat ideat per en Xavi Juez i compta amb les il·lustracions de l'Arnau Solà Vila.</p>
         <p>
@@ -45,7 +65,7 @@
       </div>
     </main>
     <footer>
-      <div class="contacte"><a hfer="#">izeland@gmail.com</a></div>
+      <div class="contact"><a hfer="#">izeland@gmail.com</a></div>
     </footer>
   </body>
 </html>
