--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="icons/arrows.css">
   </head>
   <body>
     <header>
@@ -11,8 +12,9 @@
         <div class="nav_brand"><a href="index.html">Izeland</a></div>
         <div class="nav_options">
           <ul class="nav_options_list">
+            <li><a href="index.html">Inici</a></li>
             <li><a href="chapters.html">Capítols</a></li>
-            <li><a href="about.html">Sobre nosaltres</a></li>
+            <li><a href="about.html">Mat Maths</a></li>
             <li><a href="#">CAST</a></li>
           </ul>
         </div>
@@ -20,7 +22,6 @@
     </header>
     <main>
       <section class="intro">
-        <div class="intro_img"><img class="fadeIn" src="../img/math.png" alt="image Math maths"></div>
         <div class="intro_content">
           <p class="title fadeInDown">Mat maths</p>
           <p class="subtitle fadeInUp">Aventures a Izeland</p>
@@ -29,8 +30,9 @@
             que amaga aquesta illa foradada.
           </p>
           <p>
-             A més a més, de la mà d'en Mat, descobrirás les meravelles de les matemàtiques.</p><a class="button" href="#">Capítols</a>
+             A més a més, de la mà d'en Mat, descobrirás les meravelles de les matemàtiques.</p><a class="button" href="chapters.html">Capítols</a>
         </div>
+        <div class="intro_img"><img class="fadeIn" src="img/math.png" alt="image Math maths"></div>
       </section>
       <section class="product">
         <div class="content_box">
@@ -57,7 +59,7 @@
       </section>
     </main>
     <footer>
-      <div class="contacte"><a hfer="#">izeland@gmail.com</a></div>
+      <div class="contact"><a hfer="#">izeland@gmail.com</a></div>
     </footer>
   </body>
 </html>
